tests/fixtures/invalid/bool_floordiv_bytes.py
# Cannot floor divide Bool and Bytes
x: bool = True // b"hello"
